# MLOps-Flight-Price-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  dvc.yaml  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: ci-cd.yaml
Notebooks/: data-cleaning.ipynb  eda.ipynb  feature-engineering.ipynb
data/: .gitignore
flight_price.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flight_price/exception/: __init__.py
flight_price/utils/: main_utils.py
mlruns/0/: meta.yaml
mlruns/0/0137c3d5d71a4e4db644584199cc74db/: meta.yaml
mlruns/0/0ea68abb833b499cbc67356cd01d86c0/: meta.yaml
mlruns/0/14522dc3a0434038bdd5a4317829147b/: meta.yaml
mlruns/0/18816ba12fb443b9b8caad86e7dfde71/: meta.yaml
mlruns/0/267154a00a144525b2dd7e140e81fd8d/: meta.yaml
mlruns/0/26eecb71ca644e4ea8f190a8b782d8ce/: meta.yaml
mlruns/0/27cfd7f129924b37af3e325804afb40a/: meta.yaml
mlruns/0/2a935efc3e8741a1a15cf47f0529bea1/: meta.yaml
mlruns/0/303983ac232447adb8a940d4954dbced/: meta.yaml
mlruns/0/33dd25188c16413186cfac829c68f02e/: meta.yaml
mlruns/0/42fc2c15e4c6406b99f431893cbe05fb/: meta.yaml
mlruns/0/4f085c46310e4432b5c092f9c18adb99/: meta.yaml
mlruns/0/5d9f22ff7f084b3087aafc1b5aa61b82/: meta.yaml
mlruns/0/5e73ef9962eb4200a1386b31b3ed3dfe/: meta.yaml
mlruns/0/605e0c76e79d4cdfbd49db5774e2aa6f/: meta.yaml
notebook/: mongodb_connection.ipynb
src/: utils.py
src/Pipelines/: Prediction_pipeline.py  training_pipeline.py
src/components/: data_ingestion.py  data_transformation.py  feature_engineering.py  model_training.py
(+622 files in other folders)
